# zeppelin

./: .buildinfo  .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  index.html  lint  objects.inv  searchindex.js  setup_riscv_dv.sh  verilator_waivers.vlt
.doctrees/: environment.pickle  index.doctree
.doctrees/fl/: assembler.doctree  proc.doctree
.doctrees/overview/: build_system.doctree  data_flow.doctree  dependencies.doctree  motivation.doctree  overview.doctree  programming_guide.doctree  repository_structure.doctree  todo.doctree
.doctrees/uarch/: seq_nums.doctree
.doctrees/units/: ctrl_flow_unit.doctree  decode_issue_unit.doctree  execute_units.doctree  fetch_unit.doctree  units.doctree  writeback_commit_unit.doctree
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/fl/: proc.rst.txt
_sources/overview/: build_system.rst.txt  dependencies.rst.txt  motivation.rst.txt  overview.rst.txt  repository_structure.rst.txt  todo.rst.txt
_sources/units/: ctrl_flow_unit.rst.txt  decode_issue_unit.rst.txt  execute_units.rst.txt  units.rst.txt  writeback_commit_unit.rst.txt
_static/css/: image.css  logo.css  table.css  wavedrom.css
app/: CMakeLists.txt
app/adventure/: CMakeLists.txt  README.md  advcave.h  advdec.h  advent4.h  adventure.c  config.h  database.c  english.c  itverb.c  proto.h  turn.c  verb.c
app/cmake/: rv32.cmake
app/echo/: CMakeLists.txt  echo.cpp
app/hello/: CMakeLists.txt  hello.cpp
app/scripts/: crt0.S  zeppelin.ld
app/sqrt/: CMakeLists.txt  README.md  sqrt-iter-adhoc.c  sqrt-iter.c  sqrt-iter.h  sqrt-recur-adhoc.c  sqrt-recur.c  sqrt-recur.h
app/ubmark/: CMakeLists.txt  README.md  branchloop-branchless.cpp  branchloop-branchy.cpp  branchloop.h  bsearch.cpp  bsearch.h  crc32-bitwise.cpp  crc32-table.cpp  crc32.h  depchain-multi.cpp  depchain-serial.cpp  depchain.h  fir-naive.cpp  fir-unrolled.cpp  fir.h  ifft-naive.cpp  ifft-radix2.cpp  ifft.h  isortsearch-insertion.cpp  isortsearch-selection.cpp  isortsearch.h  matmul-naive.cpp  matmul-tiled.cpp  matmul.h  memcopy-compheavy.cpp  memcopy-memheavy.cpp  memcopy.h  mulchain-dual.cpp  mulchain-single.cpp  mulchain.h  oooiq-demo.cpp  ptrchase-onechain.cpp  ptrchase-twochains.cpp  ptrchase.h  regpress-high.cpp  regpress-low.cpp  regpress.h  stringsearch-byte.cpp  stringsearch-firstchar.cpp  (+10 more)
app/utils/: zeppelin_exit.cpp  zeppelin_exit.h  zeppelin_misc.cpp  zeppelin_misc.h  zeppelin_rand.cpp  zeppelin_rand.h  zeppelin_stats.cpp  zeppelin_stats.h  zeppelin_stdio.cpp  zeppelin_stdio.h  zeppelin_stdlib.h  zeppelin_string.cpp  zeppelin_string.h  zeppelin_wprintf.cpp  zeppelin_wprintf.h
asm/: assemble.cpp  assemble.h  assemble.v  disassemble.cpp  disassemble.h  disassemble.v  fields.cpp  fields.h  inst.cpp  inst.h
cmake/: CMakeDetermineVerilogCompiler.cmake  CMakeTestVerilogCompiler.cmake  CMakeVerilogCompiler.cmake.in  CMakeVerilogInformation.cmake  vdeps.cmake  vlint.cmake
defs/: ISA.v  UArch.v
docs/: conf.py  index.rst
docs/fl/: assembler.rst  proc.rst
docs/overview/: build_system.rst  data_flow.rst  dependencies.rst  motivation.rst  programming_guide.rst  repository_structure.rst  todo.rst  versions.rst
docs/uarch/: seq_nums.rst
docs/units/: ctrl_flow_unit.rst  decode_issue_unit.rst  execute_units.rst  fetch_unit.rst  units.rst  writeback_commit_unit.rst
fl/: FLInst.cpp  FLInst.h  FLMem.cpp  FLMem.h  FLPeripheral.cpp  FLPeripheral.h  FLProc.cpp  FLProc.h  FLRegfile.cpp  FLRegfile.h  FLTrace.cpp  FLTrace.h  fl_peripherals.cpp  fl_peripherals.h  fl_peripherals.v  fl_sim.cpp  fl_vtrace.cpp  fl_vtrace.h  fl_vtrace.v  parse_elf.cpp  parse_elf.h
fl/assembler/: index.html
fl/peripherals/: FLExit.cpp  FLExit.h  FLTerminal.cpp  FLTerminal.h
fl/proc/: index.html
genindex/: index.html
hw/common/: Fifo.v  ISLIPCore.v  PriorityEncoder.v
hw/ctrl_flow/: CtrlFlowUnit.v
hw/decode_issue/: DIUCtrlFlowPublisher.v  DIUFifo.v  DecodeIssueUnit.v  ImmGen.v  InstChecks.v  InstDecoder.v  IssueQueueInOrder.v  IssueQueueOOO.v  SSDecoder.v  SSInstMapper.v  SSInstRouter.v  SSRegfile.v  SSRenameTable.v
hw/execute/: ALU.v  ControlFlowUnit.v  IterativeMulDivRem.v  LoadStoreUnit.v  SingleCycleMulDivRem.v  SingleCycleMulIterativeDivRem.v
hw/fetch/: BranchPredictor.v  FetchAddrGen.v  FetchSquashTracker.v  FetchUnit.v  SeqNumGen.v
hw/top/: Zeppelin.v  Zeppelin_defaults.vh  Zeppelin_linetrace.md
hw/top/test/riscv_dv_asm/: CMakeLists.txt
hw/top/test/riscv_dv_asm/custom_targets/rv32_all_blimp/: riscv_core_setting.sv  testlist.yaml
hw/top/test/riscv_dv_asm/custom_targets/rv32_arith_blimp/: riscv_core_setting.sv  testlist.yaml
hw/top/test/riscv_dv_asm/custom_targets/rv32_arith_ctrl_blimp/: riscv_core_setting.sv  testlist.yaml
hw/top/test/riscv_dv_asm/custom_targets/rv32_arith_mem_blimp/: riscv_core_setting.sv  testlist.yaml
hw/top/test/riscv_dv_asm/custom_targets/rv32_base_blimp/: riscv_core_setting.sv  testlist.yaml
hw/top/test/riscv_dv_asm/custom_targets/rv32_ctrl_blimp/: riscv_core_setting.sv  testlist.yaml
hw/top/test/riscv_dv_asm/custom_targets/rv32_mem_blimp/: riscv_core_setting.sv  testlist.yaml
hw/top/test/riscv_dv_asm/scripts/: blimp_test.ld  crt0_test.S
hw/util/: D__XDelay.v  DelayStream.v  F__DDelay.v  SSSeqAge.v  TraceHeader.v  X__WDelay.v
hw/writeback_commit/: SSROB.v  SSWCUArb.v  WCUFifo.v  WritebackCommitUnit.v
intf/: CommitNotif.v  CompleteNotif.v  ControlFlowNotif.v  D__XIntf.v  F__DIntf.v  InstCheckIntf.v  InstTraceNotif.v  MemIntf.v  X__WIntf.v
overview/build_system/: index.html
overview/data_flow/: index.html
overview/dependencies/: index.html
overview/motivation/: index.html
overview/overview/: index.html
overview/programming_guide/: index.html
overview/repository_structure/: index.html
overview/todo/: index.html
search/: index.html
test/: FLTestUtils.v  TestUtils.v  sim.cpp
test/fl/: InstMTraceSub.v  TestMPub.v  (+10 more)
tools/: CMakeLists.txt  rvelfdump.cpp  spi_flash  verif_elf_suites.yaml  verif_elf_test_suites.yml  verif_gen_elf_tests.py  verif_riscv_dv_batch.py  verif_riscv_dv_tests.py
types/: MemMsg.v
(+178 files in other folders)
